Prevent page scrollbar from appearing

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -22,8 +22,11 @@ html {
   font-size: 16px;
 }
 
+body {
+  overflow: hidden;
+}
+
 .container {
   width: 100%;
   height: 100%;
-  margin: auto;
 }
